--- a/app/templeInfo.html
+++ b/app/templeInfo.html
@@ -44,7 +44,7 @@ current: templeInfo
             <h5 class="card-header bg-info">已裝設環保金爐寺廟一覽</h5>
             <div class="card-body">
               <!-- 選擇行政區 -->
-              <label for="district">選擇行政區</label>
+              <label for="districtSelect">選擇行政區</label>
               <select class="custom-select custom-select-lg mb-3" id="districtSelect"></select>
               <!-- 寺廟內容 -->
               <div class="table-responsive">
