線上祭拜 JS 修改

--- a/app/worship.html
+++ b/app/worship.html
@@ -61,12 +61,12 @@ current: worship
       <div class="ml-sm-5 pl-sm-3 bg bg-desk" style="position: relative">
         <div class="d-flex flex-wrap justify-content-around align-items-center" width="100px" style="position: absolute; top: 45%; bottom: 20%; left: 25%; right: 25%;">
           <img src="./assets/images/jossPaper.png" alt="金紙" class="worship-sacrifice">
-          <img src="./assets/images/apple.png" alt="蘋果" class="d-none worship-sacrifice" id="appleImg">
-          <img src="./assets/images/orange.png" alt="香橙" class="d-none worship-sacrifice" id="orangeImg">
-          <img src="./assets/images/banana.png" alt="香蕉" class="d-none worship-sacrifice" id="bananaImg">
-          <img src="./assets/images/grape.png" alt="葡萄" class="d-none worship-sacrifice" id="grapeImg">
-          <img src="./assets/images/threeAnimals.png" alt="三牲" class="d-none worship-sacrifice" id="threeAnimalsImg">
-          <img src="./assets/images/flower.png" alt="鮮花" class="d-none worship-sacrifice" id="flowerImg">
+          <img src="./assets/images/apple.png" alt="蘋果" class="d-none worship-sacrifice" data-img="apple">
+          <img src="./assets/images/orange.png" alt="香橙" class="d-none worship-sacrifice" data-img="orange">
+          <img src="./assets/images/banana.png" alt="香蕉" class="d-none worship-sacrifice" data-img="banana">
+          <img src="./assets/images/grape.png" alt="葡萄" class="d-none worship-sacrifice" data-img="grape">
+          <img src="./assets/images/threeAnimals.png" alt="三牲" class="d-none worship-sacrifice" data-img="threeAnimals">
+          <img src="./assets/images/flower.png" alt="鮮花" class="d-none worship-sacrifice" data-img="flower">
         </div>
       </div>
       <div class="my-5 text-right">
