--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@ current: index
           </div>
           <div class="col-md-6 d-flex justify-content-end">
             <a href="templeInfo.html" class="btn btn-primary px-4" role="button" title="查看更多">
-              查看更多...
+              查看更多
             </a>
           </div>
         </div>
@@ -116,7 +116,7 @@ current: index
           </ul>
           <div class="d-flex justify-content-end">
             <a href="informationNews.html" class="btn btn-primary px-4" role="button" title="查看更多">
-              查看更多...
+              查看更多
             </a>
           </div>
         </div>
