--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -16,50 +16,51 @@ current: sitemap
       <li class="breadcrumb-item active h6" aria-current="page" title="網站導覽">網站導覽</li>
     </ol>
   </nav>
-  <!-- 標題 -->
-  <h1 class="border-width my-5 pl-3">網站導覽</h1>
-  <!-- 主要內容 -->
-  <p>本網站依無障礙網頁設計原則而建置，網站的主要樣版內容分為四個大區塊：
-  <ol>
-    <li>上方導覽連結區</li>
-    <li>左方連結區</li>
-    <li>中央主要內容區</li>
-    <li>下方導覽連結區</li>
-  </ol>
-  本網站的快速鍵﹝Accesskey﹞設定如下：
-  <ul>
-    <li>Alt+U：上方導覽連結區，此區塊列有本網站主要連結。</li>
-    <li>Alt+L：左方連結區，此區塊包括其他相關連結。</li>
-    <li>Alt+C：中央主要內容區，此區塊呈現各網頁的網頁內容。</li>
-    <li>Alt+B：下方導覽連結區，此區塊呈現下方選單的連結內容。</li>
-  </ul>
-  </p>
-  <ul class="mb-5">
-    <li><a href="index.html" title="回首頁">回首頁</a></li>
-    <li><a href="sitemap.html" title="網站導覽">網站導覽</a></li>
-    <li><a href="https://ksepb.kcg.gov.tw/" title="高雄市政府環境保護局(另開新視窗)">高雄市政府環境保護局</a></li>
-    <li><a href="information.html" title="訊息專區">訊息專區</a>
-      <ul>
-        <li><a href="informationNews.html" title="最新消息">最新消息</a></li>
-        <li><a href="informationPictures.html" title="活動照片">活動照片</a></li>
-        <li><a href="templeInfo.html" title="寺廟資訊">寺廟資訊</a></li>
-        <li><a href="burnSchedule.html" title="集中燒化時程">集中燒化時程</a></li>
-      </ul>
-    </li>
-    <li><a href="activity.html" title="宣導專區">宣導專區</a>
-      <ul>
-        <li><a href="donate.html" title="以功代金">以功代金</a></li>
-        <li><a href="burn.html" title="集中燒化">集中燒化</a></li>
-      </ul>
-    </li>
-    <li><a href="worshipStart.html" title="線上祭拜">線上祭拜</a></li>
-    <li><a href="service.html" title="便民服務">便民服務</a>
-      <ul>
-        <li><a href="serviceDownload.html" title="文件下載">文件下載</a></li>
-      </ul>
-    </li>
-    <li><a href="contact.html" title="聯絡我們">聯絡我們</a></li>
-    <li><a href="privacy.html" title="隱私權安全資訊">隱私權安全資訊</a></li>
-    <li><a href="copyright.html" title="著作權聲明">著作權聲明</a></li>
-  </ul>
+  <section>
+    <!-- 標題 -->
+    <h1 class="border-width my-5 pl-3">網站導覽</h1>
+    <!-- 主要內容 -->
+    <p>本網站依無障礙網頁設計原則而建置，網站的主要樣版內容分為四個大區塊：</p>
+    <ol>
+      <li>上方導覽連結區</li>
+      <li>左方連結區</li>
+      <li>中央主要內容區</li>
+      <li>下方導覽連結區</li>
+    </ol>
+    <p>本網站的快速鍵﹝Accesskey﹞設定如下：</p>
+    <ul>
+      <li>Alt+U：上方導覽連結區，此區塊列有本網站主要連結。</li>
+      <li>Alt+L：左方連結區，此區塊包括其他相關連結。</li>
+      <li>Alt+C：中央主要內容區，此區塊呈現各網頁的網頁內容。</li>
+      <li>Alt+B：下方導覽連結區，此區塊呈現下方選單的連結內容。</li>
+    </ul>
+    <ul class="mb-5">
+      <li><a href="index.html" title="回首頁">回首頁</a></li>
+      <li><a href="sitemap.html" title="網站導覽">網站導覽</a></li>
+      <li><a href="https://ksepb.kcg.gov.tw/" title="高雄市政府環境保護局(另開新視窗)">高雄市政府環境保護局</a></li>
+      <li><a href="information.html" title="訊息專區">訊息專區</a>
+        <ul>
+          <li><a href="informationNews.html" title="最新消息">最新消息</a></li>
+          <li><a href="informationPictures.html" title="活動照片">活動照片</a></li>
+          <li><a href="templeInfo.html" title="寺廟資訊">寺廟資訊</a></li>
+          <li><a href="burnSchedule.html" title="集中燒化時程">集中燒化時程</a></li>
+        </ul>
+      </li>
+      <li><a href="activity.html" title="宣導專區">宣導專區</a>
+        <ul>
+          <li><a href="donate.html" title="以功代金">以功代金</a></li>
+          <li><a href="burn.html" title="集中燒化">集中燒化</a></li>
+        </ul>
+      </li>
+      <li><a href="worshipStart.html" title="線上祭拜">線上祭拜</a></li>
+      <li><a href="service.html" title="便民服務">便民服務</a>
+        <ul>
+          <li><a href="serviceDownload.html" title="文件下載">文件下載</a></li>
+        </ul>
+      </li>
+      <li><a href="contact.html" title="聯絡我們">聯絡我們</a></li>
+      <li><a href="privacy.html" title="隱私權安全資訊">隱私權安全資訊</a></li>
+      <li><a href="copyright.html" title="著作權聲明">著作權聲明</a></li>
+    </ul>
+  </section>
 </div>
